stylesheet: Fix oversized GtkPaned handle drag area
The drag catch area of GtkPaned is supposed to be 6px on
each side of the handle, but the CSS adds an extra 8px on the
end-child side.

This seems to be a leftover from gtk3.

Remove the margins and padding, to avoid preempting pointer clicks
on a too wide area of the end-child.

Relates gtk#4484

--- a/src/stylesheet/widgets/_paned.scss
+++ b/src/stylesheet/widgets/_paned.scss
@@ -13,32 +13,22 @@ paned {
 
   &.horizontal > separator {
     &:dir(ltr) {
-      margin: 0 -8px 0 0;
-      padding: 0 8px 0 0;
       box-shadow: inset 1px 0 $border_color;
     }
     &:dir(rtl) {
-      margin: 0 0 0 -8px;
-      padding: 0 0 0 8px;
       box-shadow: inset -1px 0 $border_color;
     }
 
     &.wide {
-      margin: 0;
-      padding: 0;
       box-shadow: inset  1px 0 $border_color,
                   inset -1px 0 $border_color;
     }
   }
 
   &.vertical > separator {
-    margin: 0 0 -8px 0;
-    padding: 0 0 8px 0;
     box-shadow: inset 0 1px $border_color;
 
     &.wide {
-      margin: 0;
-      padding: 0;
       box-shadow: inset 0  1px $border_color,
                   inset 0 -1px $border_color;
     }
